Table align fix

--- a/components/Table/index.css
+++ b/components/Table/index.css
@@ -1,7 +1,7 @@
 .Button {
     cursor: pointer;
     position: relative;
-    top: 8px;
+    top: 30px;
     width: 100%;
     height: 100%;
     text-align: center;
